# pylibsdm

./: .gitignore  LICENSE  README.md  pyproject.toml
.reuse/: dep5
docs/: conf.py  index.rst
docs/backend/: index.rst
docs/cli/: index.rst
docs/general/: index.rst  nfc.rst  sun.rst
docs/provision/: index.rst
pylibsdm/: .editorconfig  tag.py  util.py
pylibsdm/api/: __init__.py  provision.py
pylibsdm/backend/: validate.py
pylibsdm/cli/: __init__.py  provision.py  tap.py
pylibsdm/tag/: __init__.py  ntag424dna.py  structs.py  tag.py
pylibsdm/tag/ntag424dna/: __init__.py  const.py  structs.py  tag.py
tests/: test_tag.py
tests/backend/: test_validate.py
tests/tag/: test_ntag424dna.py
tests/tag/ntag424dna/: test_structs.py  test_tag.py
