[tool.poetry]
name = "pylibsdm"
version = "1.0.0a0.dev1"
description = "Python library for handling Secure Dynamic Messaging (SDM) of NFC cards like the NTAG 424 DNA"
authors = ["Dominik George <nik@naturalnet.de>"]
repository = "https://codeberg.org/Bergblau/pylibsdm"
license = "Apache-2.0"
keywords = ["nfc", "ntag424"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pycryptodome = "^3.18.0"
nfcpy = "^1.0.4"
typer = { version = "^0.9.0", optional = true, extras = ["all"] }
pydantic = "^2.0"

[tool.poetry.extras]
cli = ["typer"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.274"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"

[tool.poetry.scripts]
sdmutil = { callable = "pylibsdm.cli:app", extras = ["cli"] }

[tool.poetry.plugins."pylibsdm.tags"]
ntag424dna = "pylibsdm.tag.ntag424dna:Tag"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
addopts = "--cov pylibsdm --cov-report term-missing"
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
